--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "devbuild": "tsc --sourceMap true",
     "watch": "tsc -w",
     "start": "node --max-old-space-size=8096 dist/server.js",
-    "dev": "tsc-watch --onSuccess \"node --max-old-space-size=8096 --trace-warnings ./dist/server.js\"",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore node_modules src/server.ts",
     "dev:server": "node --max-old-space-size=8096 -r ts-node/register src/server.ts",
     "db:migrate": "npx sequelize db:migrate",
     "db:seed": "sequelize db:seed:all",
@@ -24,13 +24,13 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@hapi/boom": "^9.1.4",
     "@sentry/node": "^6.18.1",
+    "@types/bull": "^4.10.0",
     "@types/fs-extra": "^11.0.4",
-    "baileys": "github:WhiskeySockets/Baileys",
-    "async-mutex": "^0.4.1",
+    "async-mutex": "^0.5.0",
     "aws-sdk": "^2.1692.0",
+    "baileys": "7.0.0-rc.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "@types/bull": "^4.10.0",
     "bull": "^4.10.4",
     "chardet": "^2.1.0",
     "cookie-parser": "^1.4.6",
