--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,6 +28,8 @@ GERENCIANET_CLIENT_SECRET=Client_Secret_Gerencianet
 GERENCIANET_PIX_CERT=certificado-Gerencianet
 GERENCIANET_PIX_KEY=chave_pix_gerencianet
 
+COMPANY_NAME=Whaticket
+
 MAIL_HOST="smtp.hostinger.com"
 MAIL_USER="contato@seusite.com"
 MAIL_PASS="senha"
